# PX4-Autopilot

boards/px4/fmu-v6x/: xsens.px4board
docs/en/advanced_config/: parameter_reference.md
docs/en/sensor/: inertial_navigation_systems.md  xsens.md
docs/ko/advanced_config/: parameter_reference.md
docs/ko/sensor/: inertial_navigation_systems.md
docs/uk/advanced_config/: parameter_reference.md
docs/uk/sensor/: inertial_navigation_systems.md  xsens.md
docs/zh/advanced_config/: parameter_reference.md
docs/zh/sensor/: inertial_navigation_systems.md  xsens.md
src/drivers/: drv_sensor.h
src/drivers/ins/: Kconfig
src/drivers/ins/xsens/: CMakeLists.txt  Kconfig  Xsens.cpp  Xsens.hpp  module.yaml
src/drivers/ins/xsens/libxsens/: CMakeLists.txt  xbus.cpp  xbus.h  xbus_message_id.h  xbus_parser.cpp  xbus_parser.h
